json to db and bulk upload error fix